@@ -23,7 +23,6 @@ FLARE.  If not, see http://www.gnu.org/licenses/
 #include "GameState.h"
 #include "Widget.h"
 
-class MenuMovementType;
 class WidgetButton;
 class WidgetLabel;
 class MenuConfirm;
@@ -34,6 +33,10 @@ private:
 		PROMPT_SELECT_MODS_OK = 0,
 		PROMPT_SELECT_MODS_CANCEL = 1,
 	};
+	enum {
+		PROMPT_SELECT_MOUSEMOVE_NO = 0,
+		PROMPT_SELECT_MOUSEMOVE_YES = 1,
+	};
 
 	void refreshWidgets();
 
@@ -43,7 +46,7 @@ private:
 	WidgetButton *button_cfg;
 	WidgetButton *button_credits;
 	WidgetLabel *label_version;
-	MenuMovementType *menu_movement_type;
+	MenuConfirm *menu_movement_type;
 	MenuConfirm *prompt_select_mods; // Nag dialogue when core mod is not selected
 
 	TabList tablist;
